# SimplePerceptron

./: CMakeLists.txt  README.md  conan_install.sh  conanfile.txt  simplePerceptron.cpp
